--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@ body{
 <body>
   <div class="container">
     <button class="transition-btn" onclick="window.location.href='https://a.spanishhome.loan/';">a.</button>
-    <button class="transition-btn" onclick="window.location.href='https://personal.spanishhome.loan/';">Sobre fusky</button>
+    <button class="transition-btn" onclick="window.location.href='https://personal.spanishhome.loan/';">About fusky</button>
   </div>
 </body>
