--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body{
 </style>
 <body>
   <div class="container">
-    <button class="transition-btn" onclick="window.location.href='https://a.spanishhome.loan/';">Terminal.</button>
+    <button class="transition-btn" onclick="window.location.href='https://terminal.spanishhome.loan/';">Terminal.</button>
     <button class="transition-btn" onclick="window.location.href='https://personal.spanishhome.loan/';">About fusky</button>
   </div>
 </body>
