--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body{
 </style>
 <body>
   <div class="container">
-    <button class="transition-btn" onclick="window.location.href='https://aboutfusky.spanishhome.loan/';">About FizzFluff</button>
-    <button class="transition-btn" onclick="window.location.href='https://terminal.spanishhome.loan/';">Terminal.</button>
+    <button class="transition-btn" onclick="window.location.href='https://fizzfluff.github.io/aboutfizz/';">About FizzFluff</button>
+    <button class="transition-btn" onclick="window.location.href='https://fizzfluff.github.io/terminal/';">Terminal.</button>
   </div>
 </body>
