--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 </head>
 <body>
   <div class="centered-text">
-    <button class="transition-btn" onclick="window.location.href='https://fizzfluff.github.io/aboutfizz/';">About FizzFluff</button>
+    <button class="transition-btn" onclick="window.location.href='https://fizzfluff.mywire.org/aboutfizz-main/';">About FizzFluff</button>
     <br>
-    <button class="transition-btn" onclick="window.location.href='https://fizzfluff.github.io/terminal/';">Terminal.</button>
+    <button class="transition-btn" onclick="window.location.href='https://fizzfluff.mywire.org/terminal-main/';">Terminal.</button>
 </div>
 
   <canvas id="fluidCanvas"></canvas>
