--- a/aboutfizz-main/index.html
+++ b/aboutfizz-main/index.html
@@ -7,7 +7,7 @@
 
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
 	  
-	<link rel="icon" href="https://cdn.discordapp.com/attachments/1200740890013085736/1200741837971935242/Screenshot_2024-01-27_035858.png?ex=65c748fa&is=65b4d3fa&hm=c8036c4e209d9c7b4cd6a344162ca00a2bebfc723eebe1829b7a989e5ec41af9&">
+	<link rel="icon" href="https://raw.githubusercontent.com/fizzfluff/fizz/refs/heads/main/27.png">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
