--- a/terminal-main/index.html
+++ b/terminal-main/index.html
@@ -1,7 +1,7 @@
 <html lang="en"><head>
   <meta charset="UTF-8">
-  <title>a</title>
-  
+  <title>terminal</title>
+  <link rel="icon" href="https://raw.githubusercontent.com/fizzfluff/fizz/refs/heads/main/27.png">
 <style>
 body {
   background: #000000;
