--- a/terminal-main/index.html
+++ b/terminal-main/index.html
@@ -171,7 +171,7 @@ $(function () {
   {
     action: 'type',
     strings: ['It hurts a lot constantly, but suffering is necessary for change. ^1000'],
-    output: '<span class="gray">- I hope my blood and tears make the way for someone that seeks that change.<br>> change: command not found</span><br>&nbsp;',
+    output: '<span class="gray">- I hope my blood and tears make the way for the last one in the search for that change.<br>> change: command not found</span><br>&nbsp;',
     postDelay: 1000 },
   {
     action: 'type',
