--- a/randomize.html
+++ b/randomize.html
@@ -25,9 +25,19 @@
 		// List of URLs (two or more) for the experimental treatment and control groups.
 		var RedirectURLs = {
 			"urls" : [
-				{ "url" : "http://www.aftonbladet.se/" },
-				{ "url" : "http://www.dn.se/" },
-				{ "url" : "http://www.svd.se/" }
+        { "url": "https://youtu.be/q0ayAEspa8Y" },
+        { "url": "https://youtu.be/BLBFM2bTSTg" },
+        { "url": "https://youtu.be/ikGaCYy8naw" },
+        { "url": "https://youtu.be/BqnG_Ei35JE" },
+        { "url": "https://youtu.be/8Xna1awUN_o" },
+        { "url": "https://youtu.be/Vyu2VLxykyM" },
+        { "url": "https://youtu.be/BVoORTFP8rA" },
+        { "url": "https://youtu.be/zhIScvlFn2w" },
+        { "url": "https://youtu.be/CqGOwGQtCFk" },
+        { "url": "https://youtu.be/_ikArCV_zD0" },
+        { "url": "https://youtu.be/48cp1ZN6iuM" },
+        { "url": "https://youtu.be/QyF_GYl53Ic" },
+        { "url": "https://youtu.be/9Aj_hUGxNwg" }
 			]
 		}
 
