--- a/aboutfizz-main/index.html
+++ b/aboutfizz-main/index.html
@@ -59,7 +59,7 @@
 				<div><br>
 					<img src="uwu-8.gif" alt="Avatar" style="width:200px">
 					<br><br>
-					<img src="owo.png" alt="Avatar" style="width:200px">
+					<img src="final.png" alt="Avatar" style="width:200px">
 				</div>
 			</div>
 		</div>
