--- a/aboutfizz-main/index.html
+++ b/aboutfizz-main/index.html
@@ -38,6 +38,14 @@
 					            <p><span>Discord:</span> <a href="https://discordapp.com/users/1194990923990454315">fizzfluffs</a></p>
 					          </div>
 				          </div>
+							<div class="dbox w-100 d-flex align-items-start">
+				        		<div class="icon d-flex align-items-center justify-content-center">
+				        			<span class="bi bi-discord"></span>
+				        		</div>
+				        		<div class="text pl-4">
+					            <p><span>Discord server:</span> <a href="https://discord.gg/kDHUqQBq6y">Fluffverse</a></p>
+					        </div>
+				          </div>
 				        	<div class="dbox w-100 d-flex align-items-start">
 				        		<div class="icon d-flex align-items-center justify-content-center">
 				        			<span class="bi bi-badge-vr-fill"></span>
